# AllTheThings

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  Package.resolved  Package.swift  README.md
.codex/skills/publish-release/: SKILL.md
.codex/skills/publish-release/agents/: openai.yaml
.codex/skills/sprite-sheet-animation-updater/: SKILL.md
.codex/skills/sprite-sheet-animation-updater/agents/: openai.yaml
.codex/skills/sprite-sheet-animation-updater/scripts/: generate_allthethings_operation_rows.py  validate_allthethings_nib.sh  validate_sprite_sheet.py
.codex/skills/update-promo-assets/: SKILL.md
.codex/skills/update-promo-assets/agents/: openai.yaml
Resources/: AllTheThings.icns  Info.plist
Sources/ATTCore/: DiagnosticLogging.swift  FileExclusionQuery.swift  FileExclusionRules.swift  FileIndex.swift  FileRecord.swift  FuzzyMatcher.swift  IndexInsights.swift  RecordStore.swift  SnapshotLayout.swift
Sources/AllTheThings/: AppDelegate.swift  AppSettings+Appearance.swift  AppSettings.swift  AppTheme.swift  ApplicationSearchCatalog.swift  DiagnosticsReportBuilder.swift  FileSystemWatcher.swift  FullDiskAccessController.swift  GlobalHotKey.swift  InsightsWindowController.swift  LaunchAtLoginController.swift  MascotSpriteSheet.swift  ProcessMemoryUsage.swift  ReleaseUpdater.swift  SearchWindowController.swift  SearchWindowSupportViews.swift  SettingsWindowController.swift  SettingsWindowSupportViews.swift  ThirdPartyNotices.swift
Tests/ATTCoreTests/: DiagnosticLoggingTests.swift  FileExclusionRulesTests.swift  FileIndexDeferredOptimizationBenchmarkTests.swift  FileIndexExclusionBenchmarkTests.swift  FileIndexInsightsTests.swift  FileIndexTests.swift  FuzzyMatcherTests.swift  MemoryBudgetTests.swift  RealRootPhaseTimingTests.swift  ScannerPerformanceExperimentTests.swift
Tests/AllTheThingsTests/: AppRuntimeStatusFormatterTests.swift  AppSettingsTests.swift  ApplicationSearchCatalogTests.swift  DiagnosticsReportBuilderTests.swift  FileSystemWatcherTests.swift  InsightsTreemapLayoutTests.swift  MacAssedAppPolishTests.swift  MascotSpriteSheetTests.swift  ProcessMemoryFormatterTests.swift  SearchToolbarTests.swift  SettingsWindowTests.swift
cmake/: BundleSwiftApp.cmake  LaunchApp.c.in
docs/: DEVELOPMENT.md  catch-up-memory-investigation.md
tools/: diagnose-computer-use.sh  extract-computer-use-frames.mjs  release.sh  render-computer-use-recording.sh  reset-app-state.sh  safety-check.sh
